# Python-2025-01-HW01

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.cfg  main.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
reports/: report-2025.01.30.html
src/app/: log_analyzer.py  logger.py  module.py  result.html
tests/: test_app.py
